# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\CertificateController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -16,4 +17,9 @@ use Illuminate\Support\Facades\Route;
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
+});
+Route::group(['prefix' => 'certificate'], function() {
+    Route::post('/buy',[CertificateController::class,'buy_certificate']);
+    Route::post('/activate',[CertificateController::class,'activate_certificate']);
+    Route::get('/list',[CertificateController::class,'activated_certificate']);
 });
